Add test for Payment Method by Id. Fix access for Admin and owner.
